<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chiens</string>
    <string name="widget_name">Chiens</string>

    <string name="soundFile">Chiens.mp3</string>
    <string name="soundTitle">Chiens</string>

    <color name="buttonColor">#AAAAAAAA</color>
    <color name="buttonShadow">#AAAAAAAA</color>
    <color name="sectionColor">#FF93646c</color>
    <color name="sectionShadow">#AAFFFFFF</color>
    <color name="sectionBg">#66999999</color>
    <color name="white">#FFFFFFFF</color>
    <color name="black">#FF000000</color>
    <color name="grey">#FFB3B3B3</color>
    <color name="button_pressed">#FF303740</color>
    <color name="button_focused">#FF303740</color>
    <color name="button_default">#FFEEEECC</color>

    <string name="Ok">Ok</string>
    <string name="quit_title">Quitter ?</string>
    <string name="quit_message">Voulez-vous quitter cette application?</string>
    <string name="yes">Oui</string>
    <string name="no">Non</string>
    <string name="goingon">L\'application continue</string>

    <string name="changelog_title">Nouveautés</string>
    <string name="about_title">A propos</string>

    <string name="volume_title">Volume ?</string>
    <string name="volume_question">Le volume de votre téléphone est assez bas, voulez-vous mettre le son au MAX?</string>
    <string name="volume_yes">Oui, mettre à fond!</string>
    <string name="volume_no">Non, laisser comme il est...</string>

    <string name="actions">Actions</string>
    <string name="play">Jouer le son</string>
    <string name="ringtone">Mettre en sonnerie</string>
    <string name="ringtoneok">Votre sonnerie a été changé</string>
    <string name="ringtoneko">Votre sonnerie n\'a pas été changé</string>
    <string name="notification">Mettre en notification de SMS</string>
    <string name="notificationok">Votre notification de SMS a été changé</string>
    <string name="notificationko">Votre notification de SMS n\'a pas été changé</string>

    <string name="share_with">Partager avec...</string>
    <string name="share_title">Un ami vous recommande...</string>
    <string name="share_link">http://market.android.com/details?id=com.kiof.lbachien</string>

    <string name="other_link">market://search?q=pub:Kiof</string>

    <string name="menuTitle1">Options</string>
    <string name="menuTitleCondensed1">Options</string>
    <string name="menuTitle2">Envoyer à un ami</string>
    <string name="menuTitleCondensed2">Partager</string>
    <string name="menuTitle3">Plus d\'applications gratuites</string>
    <string name="menuTitleCondensed3">Plus d\'applications</string>
    <string name="menuTitle4">A propos...</string>
    <string name="menuTitleCondensed4">A propos</string>
    <string name="menuTitle5">Quitter l\'application</string>
    <string name="menuTitleCondensed5">Quitter</string>

    <string name="preference_category_volume">Volume</string>
    <string name="checkvolume_title">Vérifier le volume</string>
    <string name="checkvolume_summary">Vérifier que le volume est suffisamment élevé au démarrage</string>
    <string name="volumemax_title">Mettre au maximum</string>
    <string name="volumemax_summary">Réglez le volume au maximum au démarrage</string>
    <string name="volumerestore_title">Restaurer le volume</string>
    <string name="volumerestore_summary">Restaurer le volume précédent lors de la sortie de l\'application</string>
    <string name="preference_category_features">Fonctionnement</string>
    <string name="lgclick_title">Appui long</string>
    <string name="lgclick_summary">Ouvre un menu contextuel en cas d\'appui long sur un son</string>
    <string name="shake_title">Boite à Meuh</string>
    <string name="shake_summary">Jouer un son aléatoire en secouant ou retournant le téléphone</string>
    <string name="bgmusic_title">Musique d\'introduction</string>
    <string name="bgmusic_summary">Jouer une courte musique d\'introduction au lancement de l\'application</string>
    <string name="save_setting">Enregistrer les paramètres</string>
    <string name="setting_saved">Paramètres enregistrés</string>

    <string-array name="textSections">
        <item>Chiots</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Petits Chiens</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Grands Chiens</item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item></item>
        <item>Special</item>
        <item></item>
        <item></item>
        <item></item>
    </string-array>

    <string-array name="textButtons">
        <item>Chiot 1</item>
        <item>Chiot 2</item>
        <item>Chiot 3</item>
        <item>Chiot 4</item>
        <item>Chiot 5</item>
        <item>Chiot 6</item>
        <item>Chiot 7</item>
        <item>Chiot 8</item>
        <item>Petit 1</item>
        <item>Petit 2</item>
        <item>Petit 3</item>
        <item>Petit 4</item>
        <item>Petit 5</item>
        <item>Petit 6</item>
        <item>Petit 7</item>
        <item>Petit 8</item>
        <item>Petit 9</item>
        <item>Petit 10</item>
        <item>Petit 11</item>
        <item>Petit 12</item>
        <item>Petit 13</item>
        <item>Petit 14</item>
        <item>Petit 15</item>
        <item>Petit 16</item>
        <item>Grand 1</item>
        <item>Grand 2</item>
        <item>Grand 3</item>
        <item>Grand 4</item>
        <item>Grand 5</item>
        <item>Grand 6</item>
        <item>Grand 7</item>
        <item>Grand 8</item>
        <item>Grand 9</item>
        <item>Grand 10</item>
        <item>Grand 11</item>
        <item>Grand 12</item>
        <item>Grand 13</item>
        <item>Grand 14</item>
        <item>Grand 15</item>
        <item>Grand 16</item>
        <item>Grand 17</item>
        <item>Grand 18</item>
        <item>Grand 19</item>
        <item>Special 1</item>
        <item>Special 2</item>
        <item>Special 3</item>
        <item>Special 4</item>
    </string-array>
</resources>
