<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/preference_category_volume">

        <CheckBoxPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="checkvolume"
            android:summary="@string/checkvolume_summary"
            android:title="@string/checkvolume_title" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:dependency="checkvolume"
            android:key="volumemax"
            android:summary="@string/volumemax_summary"
            android:title="@string/volumemax_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="volumemax"
            android:key="volumerestore"
            android:summary="@string/volumerestore_summary"
            android:title="@string/volumerestore_title" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_features">

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="lgclick"
            android:summary="@string/lgclick_summary"
            android:title="@string/lgclick_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="shake"
            android:summary="@string/shake_summary"
            android:title="@string/shake_title" />

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="bgmusic"
            android:summary="@string/bgmusic_summary"
            android:title="@string/bgmusic_title" />
    </PreferenceCategory>

</PreferenceScreen>